@@ -1,8 +1,12 @@
 Changes from jTDS 0.9-rc2
 =========================
 
+09/07/2004 - Brian Heineman
+ o Corrected bug [1022968] Long SQL expression error; (thanks to Mike Hutchinson
+   for the patch).
+
 09/05/2004 - Alin Sinpalean
- o Fixed some minoe issues with LOBs and InputStreams/Readers that don't fill
+ o Fixed some minor issues with LOBs and InputStreams/Readers that don't fill
    the read buffer.
  o Fixed BigDecimal handling in Support.embedData() (used when prepareSQL=0).
    BigDecimal values had their precision changed to 10 for some reason.
